# Algorithms_and_Data_Structures

./: CMakeLists.txt  README.md
Part1/: t1005.cpp  t1155.cpp  t1296.cpp  t1401.cpp  t2025.cpp
Part1/Reports/: P3210_EMashina_1155.doc  P3210_EMashina_1296.doc  ~$210_EMashina_2025_1005_1155_1296_1401.doc
Part1/Отчеты/: P3210_EMashina_1005.doc  P3210_EMashina_1401.doc  P3210_EMashina_2025.doc  P3210_EMashina_2025_1005_1155_1296_1401.doc  P3210_EMashina_2025_1005_1155_1296_1401_без_кода.doc
Part2/: t1207.cpp  t1322.cpp  t1444.cpp  t1604.cpp  t1728.cpp
Part2/Reports/: P3210_EMashina_1207_1322_1444_1604_1726.doc  P3210_EMashina_1322.doc  P3210_EMashina_1444.doc  P3210_EMashina_1726.doc
Part2/Отчёты/: P3210_EMashina_1207.doc  P3210_EMashina_1604.doc
Part3/: t1067.cpp  t1494.cpp  t1521.cpp  t1628.cpp  t1650.cpp
Part3/Reports/: P3210_EMashina_1067.doc  P3210_EMashina_1067_1494_1521_1628_1650.doc  P3210_EMashina_1494.doc  P3210_EMashina_1521.doc  P3210_EMashina_1628.doc  P3210_EMashina_1650.doc  ~$210_EMashina_1067.doc
Part3/Отчёты/: P3210_EMashina_1067.doc  P3210_EMashina_1494.doc  P3210_EMashina_1628.doc
Part4/: t1080.cpp  t1160.cpp  t1162.cpp  t1450.cpp
Part4/Reports/: P3210_EMashina_1080.doc  P3210_EMashina_1080_1160_1162_1450_1806.doc  P3210_EMashina_1160.doc  P3210_EMashina_1162.doc  P3210_EMashina_1450.doc  P3210_EMashina_1806.doc
