cmake_minimum_required(VERSION 3.15)
project(aaalgo)

set(CMAKE_CXX_STANDARD 14)


add_executable(t1005 Part1/t1005.cpp)
add_executable(t1155 Part1/t1155.cpp)
add_executable(t1296 Part1/t1296.cpp)
add_executable(t1401 Part1/t1401.cpp)
add_executable(t2025 Part1/t2025.cpp)

add_executable(t1207 Part2/t1207.cpp)
add_executable(t1322 Part2/t1322.cpp)
add_executable(t1444 Part2/t1444.cpp)
add_executable(t1604 Part2/t1604.cpp)
add_executable(t1728 Part2/t1728.cpp)

add_executable(t1067 Part3/t1067.cpp)
add_executable(t1494 Part3/t1494.cpp)
add_executable(t1521 Part3/t1521.cpp)
add_executable(t1628 Part3/t1628.cpp)
add_executable(t1650 Part3/t1650.cpp)

add_executable(t1450 Part4/t1450.cpp)
add_executable(t1080 Part4/t1080.cpp)
add_executable(t11162 Part4/t1162.cpp)